--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ clap = {version = "~4", features = ["derive"]}
 mdbook = "~0.4"
 serde_json = "~1.0"
 regex = "~1.10"
+pest = "~2.7"
+pest_derive = "~2.7"
