--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,16 @@
 [package]
 authors = ["Idan Dor <idandor@gmail.com>"]
-name = "mdbook-censored"
+name = "mdbook-ifdef"
 version = "0.1.0"
 edition = "2021"
 license = "MIT/Apache-2.0"
-
+description = "Package for ifdef-like capabilities  and removing subsections/chapters from mdbook"
+readme = "README.md"
+keywords = ["book", "mdbook", "rustbook", "ifdef"]
+categories = ["text-processing", "command-line-interface"]
 
 [[bin]]
-name = "mdbook-censored"
+name = "mdbook-ifdef"
 
 [dependencies]
 clap = {version = "~4", features = ["derive"]}
