Added repository to toml.
Made flags be case insensitive.

Deleted FlagsHolder object and simply replaced with Hashset<String>.

Lots of clippy requested changes.

Changed error in parsing of file to no longer panic, simply give error and return None.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ description = "Package for ifdef-like capabilities  and removing subsections/cha
 readme = "README.md"
 keywords = ["book", "mdbook", "rustbook", "ifdef"]
 categories = ["text-processing", "command-line-interface"]
+repository = "https://github.com/idandor/mdbook-ifdef"
 
 [[bin]]
 name = "mdbook-ifdef"
